--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -155,7 +155,7 @@
     {}{\InnerPatchFailed}%
   }
 {}{\PatchFailed}
-\keywords{emotion regulation, regulatory effort, effort discounting, registered report, specification curve analysis\newline\indent Word count: XXXXX}
+\keywords{emotion regulation, regulatory effort, effort discounting, registered report, emotion regulation choice, emotion regulation flexibility, electromyography\newline\indent Word count: about 9000}
 \usepackage{lineno}
 
 \linenumbers
@@ -187,7 +187,7 @@
   pdftitle={Estimating individual subjective values of emotion regulation strategies},
   pdfauthor={Christoph Scheffel,1, Josephine Zerna,1, Anne Gärtner1, Denise Dörfel1,2, \& Alexander Strobel1},
   pdflang={en-EN},
-  pdfkeywords={emotion regulation, regulatory effort, effort discounting, registered report, specification curve analysis},
+  pdfkeywords={emotion regulation, regulatory effort, effort discounting, registered report, emotion regulation choice, emotion regulation flexibility, electromyography},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
@@ -215,9 +215,14 @@ Individuals are motivated to reduce their emotional arousal effectively and to a
 Perceived costs of ER strategies in the form of effort, however, are highly subjective.
 Subjective values (SVs) should therefore represent a trade-off between effectiveness and subjectively required cognitive effort.
 However, SVs of ER strategies have not been determined so far.
-We present a paradigm that is suitable for determining individual SVs of ER strategies.
-Using a multilevel modelling approach, it will be investigated whether individual SVs can be explained by effectiveness (subjective arousal, facial muscle activity) and subjective effort.
-Relations of SVs to personality traits will be explored.
+We present a new paradigm for quantifying individual SVs of ER strategies by offering monetary values for ER strategies in an iterative process.
+\(N=120\) participants first conducted an ER paradigm with the strategies distraction, distancing, and suppression.
+Afterwards, individual SVs were determined using the new CAD paradigm.
+SVs significantly predicted later choice for an ER strategy (\(\chi^2(4, \textit{n} = 119)=115.40\), \(p<.001\), \(BF10=1.62*1021\)).
+Further, SVs were associated with Corrugator activity (\(t(5, 618.96)=2.09\), \(p=.037\), \(f^2<0.001\)), subjective effort (\(t(5, 618.96)=-13.98\), \(p<.001\), \(f^2=0.035\)), and self-reported utility (\(t(5, 618.96)=29.49\), \(p<.001\), \(f^2=0.155\)).
+SVs were further associated with self-control (\(t(97.97)=2.04\), \(p=.044\), \(f^2=0.002\)), but not with flexible ER.
+With our paradigm, we were able to determine subjective values.
+The trait character of the values will be discussed.
 }
 
 
@@ -781,11 +786,27 @@ Therefore, the question arises as to how stable these individual SVs are.
 \hypertarget{trait-character-of-svs}{%
 \subsection{Trait character of SVs}\label{trait-character-of-svs}}
 
-From relatively early on in ER research, the question was asked whether the use of certain strategies is habitual, i.e.~whether they have a trait character\textsuperscript{9}.
-
+In order to further assess the relevance of the calculated individual SVs, it would be important to know how stable the values are, i.e.~whether they would show trait character.
+In other words, do the values we calculate represent a stable value within the individual?
+This conclusion cannot be drawn from the present study alone.
 The individual SVs computed in our CAD paradigm were assessed in the laboratory in a single situation.
-
-State character of goals\textsuperscript{71}
+By definition, this represents a state.
+As previously noted, personal regulation goals, situational factors, and contextual demands influence the choice for or against ER strategies\textsuperscript{21}.
+We belief that these goals, factors and demands also influence individual SVs of ER strategies.
+Our data presented in this study support this idea.
+However, this also means that SVs should differ according to situational factors (e.g., intensity of stimuli).
+It also must be taken into account which ER goals the individuals are pursuing in a particular situation.
+In our laboratory setting, participants pursue mainly prohedonic goals, but certainly not social goals\textsuperscript{82}.
+Wilms and colleagues\textsuperscript{71} pointed out that ER goals, as well as situational factors, should be treated as states, because both vary strongly among events and situations.
+In another situation, for example outside the laboratory, where an individual is primarily pursuing a social goal, another strategy might appear more helpful and thus have a higher SV.
+It should also be noted that the computation of individual SVs in our CAD paradigm always refers to the alternative strategies that were available to the individuals (see also \protect\hyperlink{Limitations}{Limitations}).
+Therefore, SVs could vary if other reference strategies are used.
+It is conceivable that the subjective values are likely to correlate very highly in situations with similar demands and goals.
+They would thus reflect habits, or habitual use of ER strategies, which has already been attempted to capture by means of questionnaires\textsuperscript{9}.
+The other way round, of course, it is also conceivable that such habits influence the internal formation of these subjective values.
+However, our data are not suitable for answering this question.
+In future, the SVs should therefore be collected in several similar situations.
+Subsequently, the association of the values with each other could be assessed, as well as correlations with relevant external criteria, such as well-being\textsuperscript{9}.
 
 \hypertarget{limitations}{%
 \subsection{Limitations}\label{limitations}}
@@ -793,9 +814,9 @@ State character of goals\textsuperscript{71}
 Our findings must be considered in light of several limitations.
 First, it must be mentioned that a block design was used.
 This allows for habituation effects of EMG activity within the block.
-However, block designs are common in ER research\textsuperscript{81} and were used in previous studies\textsuperscript{82}.
+However, block designs are common in ER research\textsuperscript{83} and were used in previous studies\textsuperscript{84}.
 Second, it has to be mentioned that subjective arousal, effort, and utility ratings were conducted retrospectively at the end of each block.
-It is also known that affect labeling might attenuate emotional experience\textsuperscript{83,84}.
+It is also known that affect labeling might attenuate emotional experience\textsuperscript{85,86}.
 That is why we decided not to have the ratings done after every image.
 Furthermore, we were able to confirm our manipulation checks, indicating that implementation of ER strategies was successful, both on subjective and physiological levels.
 Taken together, these two facts may have led to slightly lower associations between SVs and predictors.
@@ -813,11 +834,20 @@ Fourth, the highest value during the discounting paradigm was set to 2 € as fi
 Participants should imagine that this was the amount of money they would get when they would repeat this strategy.
 Thus, 2 € as an incentive to repeat an entire regulation block could be quite low.
 However, we chose this amount because, first, we have followed the original paradigm of Westbrook\textsuperscript{29}.
-Further it was shown that at least in cognitive effort discounting, a lower incentive could even increase sensitivity in participants for differences in effort\textsuperscript{85}.
-n the future, however, it should be examined how the level of incentives affects subjective values.
+Further it was shown that at least in cognitive effort discounting, a lower incentive could even increase sensitivity in participants for differences in effort\textsuperscript{87}.
+In the future, however, it should be examined how the level of incentives affects subjective values.
 
 \hypertarget{conclusion}{%
 \subsection{Conclusion}\label{conclusion}}
+
+In order to cope with changing emotional demands, individuals can flexibly select and apply strategies from their repertoire\textsuperscript{12,13}.
+The strategy that is most suitable for dealing with contextual demands and achieving regulatory goals is selected\textsuperscript{12,82}.
+The combination of influencing factors should be reflected in subjective values, which are formed for all alternatives and serve as a basis for decision-making.
+So far, such subjective values for ER strategies have not been determined.
+Our proposed CAD paradigm contributes to research on ER Choice and ER Flexibility by allowing quantification of these values.
+This provides a more detailed investigation of factors influencing the internal generation of these SVs of ER strategies.
+It seems that it is primarily the perceived usefulness and the effort expended that determine the subjective value attributed to a strategy.
+Finally, further research is needed to investigate the factors influencing subjective values and whether these values represent habitual use of ER strategies by individuals.
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -1148,36 +1178,44 @@ n the future, however, it should be examined how the level of incentives affects
 \CSLLeftMargin{80. }%
 \CSLRightInline{Sheppes, G. \href{https://doi.org/10.1016/bs.aesp.2019.09.003}{Transcending the "good \& bad" and "here \& now" in emotion regulation: Costs and benefits of strategies across regulatory stages}. \emph{Advances in Experimental Social Psychology, Vol 61} \textbf{61}, 185--236 (2020).}
 
-\leavevmode\vadjust pre{\hypertarget{ref-Barreiros2019}{}}%
+\leavevmode\vadjust pre{\hypertarget{ref-Haines2016}{}}%
 \CSLLeftMargin{81. }%
+\CSLRightInline{Haines, S. J. \emph{et al.} \href{https://doi.org/10.1177/0956797616669086}{The wisdom to know the difference: Strategy-situation fit in emotion regulation in daily life is associated with well-being}. \emph{Psychological Science} \textbf{27}, 1651--1659 (2016).}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Tamir2016}{}}%
+\CSLLeftMargin{82. }%
+\CSLRightInline{Tamir, M. \href{https://doi.org/10.1177/1088868315586325}{Why do people regulate their emotions? A taxonomy of motives in emotion regulation}. \emph{Personality and Social Psychology Review} \textbf{20}, 199--222 (2016).}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Barreiros2019}{}}%
+\CSLLeftMargin{83. }%
 \CSLRightInline{Barreiros, A. R., Almeida, I., Baia, B. C. \& Castelo-Branco, M. \href{https://doi.org/10.3389/fnhum.2019.00089}{Amygdala modulation during emotion regulation training with fMRI-based neurofeedback}. \emph{Frontiers in Human Neuroscience} \textbf{13}, 89 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Scheffel2019}{}}%
-\CSLLeftMargin{82. }%
+\CSLLeftMargin{84. }%
 \CSLRightInline{Scheffel, C. \emph{et al.} \href{https://doi.org/10.1017/pen.2019.11}{Cognitive emotion regulation and personality: An analysis of individual differences in the neural and behavioral correlates of successful reappraisal}. \emph{Personality Neuroscience} \textbf{2}, e11 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Lieberman2007}{}}%
-\CSLLeftMargin{83. }%
+\CSLLeftMargin{85. }%
 \CSLRightInline{Lieberman, M. D. \emph{et al.} \href{https://doi.org/10.1111/j.1467-9280.2007.01916.x}{Putting feelings into words - affect labeling disrupts amygdala activity in response to affective stimuli}. \emph{Psychological Science} \textbf{18}, 421--428 (2007).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Torre2018}{}}%
-\CSLLeftMargin{84. }%
+\CSLLeftMargin{86. }%
 \CSLRightInline{Torre, J. B. \& Lieberman, M. D. \href{https://doi.org/10.1177/1754073917742706}{Putting feelings into words: Affect labeling as implicit emotion regulation}. \emph{Emotion Review} \textbf{10}, 116--124 (2018).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Bialaszek2017}{}}%
-\CSLLeftMargin{85. }%
+\CSLLeftMargin{87. }%
 \CSLRightInline{Bialaszek, W., Marcowski, P. \& Ostaszewski, P. \href{https://doi.org/ARTN\%20e0182353\%0A10.1371/journal.pone.0182353}{Physical and cognitive effort discounting across different reward magnitudes: Tests of discounting models}. \emph{Plos One} \textbf{12}, (2017).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Preece2020}{}}%
-\CSLLeftMargin{86. }%
+\CSLLeftMargin{88. }%
 \CSLRightInline{Preece, D. A., Becerra, R., Robinson, K. \& Gross, J. J. \href{https://doi.org/10.1080/00223891.2018.1564319}{The emotion regulation questionnaire: Psychometric properties in general community samples}. \emph{J Pers Assess} \textbf{102}, 348--356 (2020).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Fleischhauer2010}{}}%
-\CSLLeftMargin{87. }%
+\CSLLeftMargin{89. }%
 \CSLRightInline{Fleischhauer, M. \emph{et al.} \href{https://doi.org/10.1177/0146167209351886}{Same or different? {Clarifying} the relationship of need for cognition to personality and intelligence}. \emph{Personality \& Social Psychology Bulletin} \textbf{36}, 82--96 (2010).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Fleischhauer2015}{}}%
-\CSLLeftMargin{88. }%
+\CSLLeftMargin{90. }%
 \CSLRightInline{Fleischhauer, M., Strobel, A. \& Strobel, A. \href{https://doi.org/10.1027/1614-0001/a000161}{Directly and indirectly assessed {N}eed for {C}ognition differentially predict spontaneous and reflective information processing behavior}. \emph{Journal of Individual Differences} \textbf{36}, 101--109 (2015).}
 
 \end{CSLReferences}
@@ -1255,7 +1293,7 @@ The german version of the scale showed a high internal consistency (Cronbach's \
 The 10-item version showed a high internal consistency (Cronbach's \(\alpha=.84\)) and a satisfactory retest-reliability of \(r_{tt}=.81\) across 6 month\textsuperscript{49}.
 
 \emph{Emotion Regulation Questionnaire.} Habitual use of reappraisal and suppression is measured using the 10-item Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,50}.
-The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\))\textsuperscript{86}.
+The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\))\textsuperscript{88}.
 
 \emph{FlexER Scale.} Flexible use of ER strategies is assessed using the FlexER Scale\textsuperscript{44} with items such as ``If I want to feel less negative emotions, I have several strategies to achieve this.'', which are answered on a 4-point scale ranging from ``strongly agree'' to ``strongly disagree''.
 Psychometric properties are currently under investigation.
@@ -1264,7 +1302,7 @@ Psychometric properties are currently under investigation.
 4 items such as ``Having to control a strong emotion makes you exhausted and you are less able to manage your feelings right afterwards.'' are rated on a 6-point scale ranging from 1 (fully agree) to 6 (do not agree at all).
 The questionnaire showed an internal consistency of Cronbach's \(\alpha=.87\)\textsuperscript{51}.
 
-\emph{Need for Cognition Scale.} Need for Cognition (NFC) is assessed with the 16-item short version of the German NFC scale\textsuperscript{52}. Responses to each item (e.g., ``Thinking is not my idea of fun'', recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score. The scale shows comparably high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{52,87} and a retest reliability of \(r_{tt}=.83\) across 8 to 18 weeks\textsuperscript{88}.
+\emph{Need for Cognition Scale.} Need for Cognition (NFC) is assessed with the 16-item short version of the German NFC scale\textsuperscript{52}. Responses to each item (e.g., ``Thinking is not my idea of fun'', recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score. The scale shows comparably high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{52,89} and a retest reliability of \(r_{tt}=.83\) across 8 to 18 weeks\textsuperscript{90}.
 
 \emph{Self-Regulation Scale.} As one measure of self-control, the Self-Regulation Scale (SRS)\textsuperscript{54} is used. The scale has 10 items (e.g., ``It is difficult for me to suppress thoughts that interfere with what I need to do.'', recoded) on a 4-point scale ranging from 1 (not at all true) to 4 (exactly true). It has high internal consistency {[}Cronbach's \(\alpha>.80\);\textsuperscript{54}{]}.
 
