--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -597,11 +597,36 @@ Please note that sample size for individual calculations may be smaller due to f
 \paragraph{Subjective arousal and physiological responding}\label{subjective-arousal-and-physiological-responding}}
 
 To explore whether negative pictures evoke emotional arousal and physiological responding, we conducted separate ANOVAs for the active viewing condition with predictors subjective arousal, \emph{Corrugator} and \emph{Levator} activity.
-We found a highly significant main effect of valence for subjective arousal (\(F(1, 119) = 399.95\), \(p < .001\), \(\hat{\eta}^2_G = .589\), 90\% CI \([.498, .659]\), \(\mathrm{BF}_{\textrm{10}} = 1.47 \times 10^{44}\)), \emph{Corrugator} activity (\(F(1, 117) = 27.73\), \(p < .001\), \(\hat{\eta}^2_G = .111\), 90\% CI \([.037, .206]\), \(\mathrm{BF}_{\textrm{10}} = 8.67 \times 10^{16}\)), and \emph{Levator} activity (\(F(1, 117) = 8.87\), \(p = .004\), \(\hat{\eta}^2_G = .039\), 90\% CI \([.002, .111]\), \(\mathrm{BF}_{\textrm{10}} = 188.72\)), indicating that negative pictures successfully evoked emotional arousal and physiological responding.
+Descriptive values of each predictor for each condition can be found in table \ref{tab:TabDescr}.
+We found a highly significant main effect of valence for subjective arousal (\(F(1, 119) = 399.95\), \(p < .001\), \(\hat{\eta}^2_G = .589\), 90\% CI \([.498, .659]\), \(\mathrm{BF}_{\textrm{10}} = 1.47 \times 10^{44}\)), \emph{Corrugator} activity (\(F(1, 117) = 27.73\), \(p < .001\), \(\hat{\eta}^2_G = .111\), 90\% CI \([.037, .206]\), \(\mathrm{BF}_{\textrm{10}} = 8.67 \times 10^{16}\)), and \emph{Levator} activity (\(F(1, 117) = 8.87\), \(p = .004\), \(\hat{\eta}^2_G = .039\), 90\% CI \([.002, .111]\), \(\mathrm{BF}_{\textrm{10}} = 188.72\)), indicating that negative pictures successfully increased emotional arousal and physiological responding.
 
 To investigate whether ER strategies reduce emotional arousal and physiological responding, we conducted separate rmANOVA comparing subjective arousal, \emph{Corrugator} and \emph{Levator} activity of four strategies (active viewing, distraction, distancing, suppression).
 We found a significant effect of strategy for subjective arousal (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 0.21\)), \emph{Corrugator} activity (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 6.16 \times 10^{7}\)), and \emph{Levator} activity (\(F(1.54, 180.41) = 19.95\), \(p < .001\), \(\hat{\eta}^2_G = .089\), 90\% CI \([.043, .134]\), \(\mathrm{BF}_{\textrm{10}} = 3.22 \times 10^{17}\)), indicating that regulation strategies reduced subjective arousal and physiological responding.
 For detailed information on post-hoc tests, please see tables \ref{tab:SupplEffectArousalReg} to \ref{tab:SupplEffectLevReg} and figures \ref{fig:SupplFigArousalReg} to \ref{fig:SupplFigLevReg} in the \protect\hyperlink{SupplementEffectER}{supplementary material}.
+{[}INSERT TABLE 1 HERE{]}
+
+\begin{lltable}
+
+\begin{longtable}{llllll}\noalign{\getlongtablewidth\global\LTcapwidth=\longtablewidth}
+\caption{\label{tab:TabDescr}$M \pm SD$ of subjective arousal, subjetive effort, subjective utility, Corrugator activity, and Levator activity for each condition.}\\
+\toprule
+ & \multicolumn{1}{c}{Subjective Arousal} & \multicolumn{1}{c}{Subjective Effort} & \multicolumn{1}{c}{Subjective Utility} & \multicolumn{1}{c}{Corrugator activity (in mV)} & \multicolumn{1}{c}{Levator activity (in mV)}\\
+\midrule
+\endfirsthead
+\caption*{\normalfont{Table \ref{tab:TabDescr} continued}}\\
+\toprule
+ & \multicolumn{1}{c}{Subjective Arousal} & \multicolumn{1}{c}{Subjective Effort} & \multicolumn{1}{c}{Subjective Utility} & \multicolumn{1}{c}{Corrugator activity (in mV)} & \multicolumn{1}{c}{Levator activity (in mV)}\\
+\midrule
+\endhead
+$View_{neu}$ & 26.6 ± 39.1 & 18.1 ± 27.4 &  & 0.04 ± 6.99 & 0.09 ± 1.84\\
+$View_{neg}$ & 187.8 ± 87.3 & 49.4 ± 62.3 &  & 1.03 ± 7.21 & 0.58 ± 3.2\\
+Distraction & 158.1 ± 92.5 & 208.5 ± 96.1 & 216.6 ± 93.2 & 0 ± 7.67 & -0.05 ± 1.16\\
+Distancing & 164 ± 87.2 & 189.8 ± 92.3 & 214.8 ± 78.6 & 0.25 ± 1.92 & 0.01 ± 1\\
+Suppression & 168.6 ± 95.8 & 158.3 ± 99.5 & 229.3 ± 95 & 0.07 ± 3.78 & -0.03 ± 0.92\\
+\bottomrule
+\end{longtable}
+
+\end{lltable}
 
 \hypertarget{subjective-effort-of-er-strategies}{%
 \paragraph{Subjective effort of ER strategies}\label{subjective-effort-of-er-strategies}}
@@ -646,7 +671,7 @@ SV \sim \text{effort rating} + \text{arousal rating} + \text{utility rating} + c
 The second model explained 0.41\% of variance.
 All results of the second model are in Table~\ref{tab:TabMLMH5}.
 
-{[}INSERT TABLE 1 HERE{]}
+{[}INSERT TABLE 2 HERE{]}
 
 \begin{table}[H]
 
@@ -675,7 +700,7 @@ Levator activity & $5.32 \times 10^{-3}$ & 0.00 & 0.07 & 0.00 & \\
 
 The predictors effort rating (\(\hat{\beta} = 0.00\), 95\% CI \([0.00, 0.00]\), \(t(5,618.96) = -13.98\), \(p < .001\)), utility rating (\(\hat{\beta} = 0.00\), 95\% CI \([0.00, 0.00]\), \(t(5,618.96) = 29.49\), \(p < .001\)), and \emph{Corrugator} activity (\(\hat{\beta} = 0.01\), 95\% CI \([0.00, 0.01]\), \(t(5,618.96) = 2.09\), \(p = .037\)) showed a significant association with SVs.
 The values were relatively small, so the respective effect size \(f^{2}\) was calculated as the explained variance.
-Interestingly, utility rating showed the greatest effect size of all predictors (\(f^{2}=\) 0.155), indicating that utility rating explained 15.5\% of variance in SVs.
+The predictor utility rating showed the greatest effect size of all predictors (\(f^{2}=\) 0.155), indicating that utility rating explained 15.5\% of variance in SVs.
 Effort rating showed an effect size of \(f^{2}=\) 0.035.
 The effect sizes of all other predictors were negligibly small (\(f^{2}< 0.01\)).
 
@@ -1235,36 +1260,7 @@ The authors would like to thank Juliana Krause and Maja Hentschel for their help
 \section{Competing Interests}\label{competing-interests}}
 
 The authors declare no competing interests.
-
-\newpage
-\setcounter{figure}{0}
-
-\hypertarget{figures-and-figure-captions}{%
-\section{Figures and figure captions}\label{figures-and-figure-captions}}
-
-\begin{figure}
-\includegraphics[width=\textwidth]{figures/Paradigm_Scheme_T2} \caption{ }\label{fig:ResponsePatternsAppendix}
-\end{figure}
-
-\emph{Figure 1.} Exemplary visualization of two response patterns.
-In the top half, the person has a clear preference for one of the three strategies.
-In the lower half, they have no clear preference and therefore show an inconsistent response pattern.
-This pattern can also be represented by our paradigm.
-
-\begin{figure}[H]
-\includegraphics[width=\textwidth]{figures/Design_ER-ED} \caption{ }\label{fig:DesignEREDappendix}
-\end{figure}
-
-\emph{Figure 2.} Block design of the paradigm.
-Every participant starts with two ``active viewing'' blocks containing neutral (Block 1) and negative (Block 2) pictures.
-Order of the regulation blocks (Blocks 3, 4, and 5) is randomized between participants.
-After, the discounting procedure takes place.
-All three regulation strategies are pairwise compared.
-Before the last block, participants can decide which regulation strategy they want to reapply.
-Subjective arousal and effort ratings are assessed after each block using a slider on screen with a continuous scale.
-
-\hypertarget{DesignTable}{%
-\section{Design Table}\label{DesignTable}}
+\# Design Table \{\#DesignTable\}
 
 \includepdf[pages={-}, landscape=true]{Supplement/Design_Table_T2.pdf}
 
