table 1 is the anti hero

--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -603,30 +603,36 @@ We found a highly significant main effect of valence for subjective arousal (\(F
 To investigate whether ER strategies reduce emotional arousal and physiological responding, we conducted separate rmANOVA comparing subjective arousal, \emph{Corrugator} and \emph{Levator} activity of four strategies (active viewing, distraction, distancing, suppression).
 We found a significant effect of strategy for subjective arousal (\(F(2.71, 322.55) = 7.39\), \(p < .001\), \(\hat{\eta}^2_G = .015\), 90\% CI \([.000, .036]\), \(\mathrm{BF}_{\textrm{10}} = 0.21\)), \emph{Corrugator} activity (\(F(1.76, 206.02) = 13.70\), \(p < .001\), \(\hat{\eta}^2_G = .056\), 90\% CI \([.019, .094]\), \(\mathrm{BF}_{\textrm{10}} = 6.16 \times 10^{7}\)), and \emph{Levator} activity (\(F(1.54, 180.41) = 19.95\), \(p < .001\), \(\hat{\eta}^2_G = .089\), 90\% CI \([.043, .134]\), \(\mathrm{BF}_{\textrm{10}} = 3.22 \times 10^{17}\)), indicating that regulation strategies reduced subjective arousal and physiological responding.
 For detailed information on post-hoc tests, please see tables \ref{tab:SupplEffectArousalReg} to \ref{tab:SupplEffectLevReg} and figures \ref{fig:SupplFigArousalReg} to \ref{fig:SupplFigLevReg} in the \protect\hyperlink{SupplementEffectER}{supplementary material}.
+
 {[}INSERT TABLE 1 HERE{]}
 
-\begin{lltable}
+\begin{table}[H]
 
-\begin{longtable}{llllll}\noalign{\getlongtablewidth\global\LTcapwidth=\longtablewidth}
-\caption{\label{tab:TabDescr}$M \pm SD$ of subjective arousal, subjetive effort, subjective utility, Corrugator activity, and Levator activity for each condition.}\\
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:TabDescr}$M \pm SD$ of subjective arousal, subjetive effort, subjective utility, Corrugator activity, and Levator activity for each condition.}
+
+\footnotesize{
+
+\begin{tabular}{lccccl}
 \toprule
  & \multicolumn{1}{c}{Subjective Arousal} & \multicolumn{1}{c}{Subjective Effort} & \multicolumn{1}{c}{Subjective Utility} & \multicolumn{1}{c}{Corrugator activity (in mV)} & \multicolumn{1}{c}{Levator activity (in mV)}\\
 \midrule
-\endfirsthead
-\caption*{\normalfont{Table \ref{tab:TabDescr} continued}}\\
-\toprule
- & \multicolumn{1}{c}{Subjective Arousal} & \multicolumn{1}{c}{Subjective Effort} & \multicolumn{1}{c}{Subjective Utility} & \multicolumn{1}{c}{Corrugator activity (in mV)} & \multicolumn{1}{c}{Levator activity (in mV)}\\
-\midrule
-\endhead
 $View_{neu}$ & 26.6 ± 39.1 & 18.1 ± 27.4 &  & 0.04 ± 6.99 & 0.09 ± 1.84\\
 $View_{neg}$ & 187.8 ± 87.3 & 49.4 ± 62.3 &  & 1.03 ± 7.21 & 0.58 ± 3.2\\
 Distraction & 158.1 ± 92.5 & 208.5 ± 96.1 & 216.6 ± 93.2 & 0 ± 7.67 & -0.05 ± 1.16\\
 Distancing & 164 ± 87.2 & 189.8 ± 92.3 & 214.8 ± 78.6 & 0.25 ± 1.92 & 0.01 ± 1\\
 Suppression & 168.6 ± 95.8 & 158.3 ± 99.5 & 229.3 ± 95 & 0.07 ± 3.78 & -0.03 ± 0.92\\
 \bottomrule
-\end{longtable}
+\end{tabular}
 
-\end{lltable}
+}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
 
 \hypertarget{subjective-effort-of-er-strategies}{%
 \paragraph{Subjective effort of ER strategies}\label{subjective-effort-of-er-strategies}}
@@ -741,7 +747,7 @@ The third model followed the specification:
 SV \sim \text{effort rating} + \text{utility rating} + corrugator \text{ activity} \\\ \text{self-control} + \text{NFC} + (1 |subject)
 \end{split}
 \]
-As one would expect, the predictors effort rating (\(\hat{\beta} = 0.00\), 95\% CI \([0.00, 0.00]\), \(t(5,620.93) = -14.26\), \(p < .001\)), utility rating (\(\hat{\beta} = 0.00\), 95\% CI \([0.00, 0.00]\), \(t(5,620.93) = 33.28\), \(p < .001\)), and \emph{Corrugator} activity (\(\hat{\beta} = 0.01\), 95\% CI \([0.00, 0.01]\), \(t(5,620.93) = 2.12\), \(p = .034\)) showed a significant association with SVs.
+As one would expect, the predictors effort rating (\(\hat{\beta} = 0.00\), 95\% CI \([0.00, 0.00]\), \(t(5,620.93) = -14.26\), \(p < .001\)) showed a negative association with SVs, while utility rating (\(\hat{\beta} = 0.00\), 95\% CI \([0.00, 0.00]\), \(t(5,620.93) = 33.28\), \(p < .001\)), and \emph{Corrugator} activity (\(\hat{\beta} = 0.01\), 95\% CI \([0.00, 0.01]\), \(t(5,620.93) = 2.12\), \(p = .034\)) showed a significant positive association with SVs.
 In addition, a positive association was also found between self-control and SVs (\(\hat{\beta} = 0.02\), 95\% CI \([0.00, 0.05]\), \(t(97.97) = 2.04\), \(p = .044\)).
 However, the effect size of self-control was negligibly small (\(f^{2}=\) 0.002).
 Detailed information can be found in the \protect\hyperlink{SupplementExploratory}{supplementary material}.
